Solucionado problema del foco de los campos

--- a/Index.html
+++ b/Index.html
@@ -7,11 +7,11 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <title>Gen Form</title>
   <link rel="shortcut icon" type="image/x-icon" href="/imagenes/SmarTech.ico">
-  <link rel="stylesheet" href="/css/mobile.css">
-  <link rel="stylesheet" href="/css/tablet.css">
-  <link rel="stylesheet" href="/css/desktop.css">
-  <script src="/js/sweetalert2.min.js"></script>
-  <link rel="stylesheet" href="/css/sweetalert2.css">
+  <link rel="stylesheet" href="css/mobile.css">
+  <link rel="stylesheet" href="css/tablet.css">
+  <link rel="stylesheet" href="css/desktop.css">
+  <script src="js/sweetalert2.min.js"></script>
+  <link rel="stylesheet" href="css/sweetalert2.css">
 </head>
 <body>
   <h1 class="tituloPrincipal">Formulario General</h1>
@@ -30,6 +30,6 @@
       </form>
     </div>
   <!-- </div> -->
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
